// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Comment /> <Comment /> not shown and focus should render correctly 1`] = `
<Connect(ComponentWithColors)
  as="li"
  useBodyColor={true}
>
  <ForwardRef(Relay(Connect(UserAvatar)))
    user={
      Object {
        "$fragmentRefs": null,
        "displayName": "admin",
        "media": null,
        "vip": true,
      }
    }
  />
  <Media
    className="opinion"
  >
    <Body
      className="opinion__body"
      id="comment_proposalComment1"
    >
      <div
        className="opinion__data"
      >
        <ForwardRef(Relay(CommentInfos))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
      </div>
      <ForwardRef(Relay(CommentBody))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
      <div
        className="small"
      >
        <ForwardRef(Relay(CommentVoteButton))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsSize="xsmall"
          bsStyle="default"
          className="btn-dark-gray btn--outline"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="cap-reply-mail-2"
          />
           
          <FormattedMessage
            id="global.answer"
            values={Object {}}
          />
        </Button>
         
        <ForwardRef(Relay(Connect(CommentReportButton)))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
        <ForwardRef(Relay(CommentEdit))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
      </div>
    </Body>
    <div
      className="CommentAnswer"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
        useBodyColor={true}
      />
    </div>
  </Media>
</Connect(ComponentWithColors)>
`;

exports[`<Comment /> <Comment /> not shown and not focus should render correctly 1`] = `
<Connect(ComponentWithColors)
  as="li"
  useBodyColor={true}
>
  <ForwardRef(Relay(Connect(UserAvatar)))
    user={
      Object {
        "$fragmentRefs": null,
        "displayName": "admin",
        "media": null,
        "vip": true,
      }
    }
  />
  <Media
    className="opinion"
  >
    <Body
      className="opinion__body"
      id="comment_proposalComment1"
    >
      <div
        className="opinion__data"
      >
        <ForwardRef(Relay(CommentInfos))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
      </div>
      <ForwardRef(Relay(CommentBody))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
      <div
        className="small"
      >
        <ForwardRef(Relay(CommentVoteButton))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsSize="xsmall"
          bsStyle="default"
          className="btn-dark-gray btn--outline"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="cap-reply-mail-2"
          />
           
          <FormattedMessage
            id="global.answer"
            values={Object {}}
          />
        </Button>
         
        <ForwardRef(Relay(Connect(CommentReportButton)))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
        <ForwardRef(Relay(CommentEdit))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
      </div>
    </Body>
    <div
      className="CommentAnswer"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
        useBodyColor={true}
      />
    </div>
  </Media>
</Connect(ComponentWithColors)>
`;

exports[`<Comment /> <Comment /> shown and focus should render correctly 1`] = `
<Connect(ComponentWithColors)
  as="li"
  useBodyColor={true}
>
  <ForwardRef(Relay(Connect(UserAvatar)))
    user={
      Object {
        "$fragmentRefs": null,
        "displayName": "admin",
        "media": null,
        "vip": true,
      }
    }
  />
  <Media
    className="opinion"
  >
    <Body
      className="opinion__body"
      id="comment_proposalComment1"
    >
      <div
        className="opinion__data"
      >
        <ForwardRef(Relay(CommentInfos))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
      </div>
      <ForwardRef(Relay(CommentBody))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
      <div
        className="small"
      >
        <ForwardRef(Relay(CommentVoteButton))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsSize="xsmall"
          bsStyle="default"
          className="btn-dark-gray btn--outline"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="cap-reply-mail-2"
          />
           
          <FormattedMessage
            id="global.answer"
            values={Object {}}
          />
        </Button>
         
        <ForwardRef(Relay(Connect(CommentReportButton)))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
        <ForwardRef(Relay(CommentEdit))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
      </div>
    </Body>
    <div
      className="CommentAnswer"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
        useBodyColor={true}
      />
      <ForwardRef(Relay(Connect(ReduxForm)))
        answerOf="proposalComment1"
        commentable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
    </div>
  </Media>
</Connect(ComponentWithColors)>
`;

exports[`<Comment /> <Comment /> shown and not focus should render correctly 1`] = `
<Connect(ComponentWithColors)
  as="li"
  useBodyColor={true}
>
  <ForwardRef(Relay(Connect(UserAvatar)))
    user={
      Object {
        "$fragmentRefs": null,
        "displayName": "admin",
        "media": null,
        "vip": true,
      }
    }
  />
  <Media
    className="opinion"
  >
    <Body
      className="opinion__body"
      id="comment_proposalComment1"
    >
      <div
        className="opinion__data"
      >
        <ForwardRef(Relay(CommentInfos))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
      </div>
      <ForwardRef(Relay(CommentBody))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
      <div
        className="small"
      >
        <ForwardRef(Relay(CommentVoteButton))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsSize="xsmall"
          bsStyle="default"
          className="btn-dark-gray btn--outline"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="cap-reply-mail-2"
          />
           
          <FormattedMessage
            id="global.answer"
            values={Object {}}
          />
        </Button>
         
        <ForwardRef(Relay(Connect(CommentReportButton)))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
        <ForwardRef(Relay(CommentEdit))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "admin",
                "media": null,
                "vip": true,
              },
              "id": "proposalComment1",
            }
          }
        />
         
      </div>
    </Body>
    <div
      className="CommentAnswer"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
        useBodyColor={true}
      />
      <ForwardRef(Relay(Connect(ReduxForm)))
        answerOf="proposalComment1"
        commentable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
    </div>
  </Media>
</Connect(ComponentWithColors)>
`;

exports[`<Comment /> should render correctly highlighted 1`] = `
<Connect(ComponentWithColors)
  as="li"
  isHighlighted={true}
  useBodyColor={true}
>
  <ForwardRef(Relay(Connect(UserAvatar)))
    user={
      Object {
        "$fragmentRefs": null,
        "displayName": "jcVandam",
        "media": Object {
          "url": "http://perdu.com/image.jpg",
        },
        "vip": true,
      }
    }
  />
  <Media
    className="opinion"
  >
    <Body
      className="opinion__body"
      id="comment_comment1"
    >
      <div
        className="opinion__data"
      >
        <ForwardRef(Relay(CommentInfos))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": Object {
                  "url": "http://perdu.com/image.jpg",
                },
                "vip": true,
              },
              "id": "comment1",
            }
          }
        />
      </div>
      <ForwardRef(Relay(CommentBody))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "jcVandam",
              "media": Object {
                "url": "http://perdu.com/image.jpg",
              },
              "vip": true,
            },
            "id": "comment1",
          }
        }
      />
      <div
        className="small"
      >
        <ForwardRef(Relay(CommentVoteButton))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": Object {
                  "url": "http://perdu.com/image.jpg",
                },
                "vip": true,
              },
              "id": "comment1",
            }
          }
        />
         
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsSize="xsmall"
          bsStyle="default"
          className="btn-dark-gray btn--outline"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="cap-reply-mail-2"
          />
           
          <FormattedMessage
            id="global.answer"
            values={Object {}}
          />
        </Button>
         
        <ForwardRef(Relay(Connect(CommentReportButton)))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": Object {
                  "url": "http://perdu.com/image.jpg",
                },
                "vip": true,
              },
              "id": "comment1",
            }
          }
        />
        <ForwardRef(Relay(CommentEdit))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": Object {
                  "url": "http://perdu.com/image.jpg",
                },
                "vip": true,
              },
              "id": "comment1",
            }
          }
        />
         
      </div>
    </Body>
    <div
      className="CommentAnswer"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "jcVandam",
              "media": Object {
                "url": "http://perdu.com/image.jpg",
              },
              "vip": true,
            },
            "id": "comment1",
          }
        }
        useBodyColor={true}
      />
    </div>
  </Media>
</Connect(ComponentWithColors)>
`;

exports[`<Comment /> should render correctly not highlighted 1`] = `
<Connect(ComponentWithColors)
  as="li"
  isHighlighted={false}
  useBodyColor={true}
>
  <ForwardRef(Relay(Connect(UserAvatar)))
    user={
      Object {
        "$fragmentRefs": null,
        "displayName": "jcVandam",
        "media": null,
        "vip": true,
      }
    }
  />
  <Media
    className="opinion"
  >
    <Body
      className="opinion__body"
      id="comment_comment2"
    >
      <div
        className="opinion__data"
      >
        <ForwardRef(Relay(CommentInfos))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": null,
                "vip": true,
              },
              "id": "comment2",
            }
          }
        />
      </div>
      <ForwardRef(Relay(CommentBody))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "jcVandam",
              "media": null,
              "vip": true,
            },
            "id": "comment2",
          }
        }
      />
      <div
        className="small"
      >
        <ForwardRef(Relay(CommentVoteButton))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": null,
                "vip": true,
              },
              "id": "comment2",
            }
          }
        />
         
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsSize="xsmall"
          bsStyle="default"
          className="btn-dark-gray btn--outline"
          disabled={false}
          onClick={[Function]}
        >
          <i
            className="cap-reply-mail-2"
          />
           
          <FormattedMessage
            id="global.answer"
            values={Object {}}
          />
        </Button>
         
        <ForwardRef(Relay(Connect(CommentReportButton)))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": null,
                "vip": true,
              },
              "id": "comment2",
            }
          }
        />
        <ForwardRef(Relay(CommentEdit))
          comment={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "$fragmentRefs": null,
                "displayName": "jcVandam",
                "media": null,
                "vip": true,
              },
              "id": "comment2",
            }
          }
        />
         
      </div>
    </Body>
    <div
      className="CommentAnswer"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "jcVandam",
              "media": null,
              "vip": true,
            },
            "id": "comment2",
          }
        }
        useBodyColor={true}
      />
      <ForwardRef(Relay(Connect(ReduxForm)))
        answerOf="comment2"
        commentable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "displayName": "jcVandam",
              "media": null,
              "vip": true,
            },
            "id": "comment2",
          }
        }
      />
    </div>
  </Media>
</Connect(ComponentWithColors)>
`;
